# CERT-Shield

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: release-please.yaml
src/: confg.py  main.py
src/config/: config.py  database.py
src/modules/alerts/: controller.py  model.py  router.py  service.py
