[tool.poetry]
name = "cert-shield"
version = "1.0.0"
description = ""
authors = ["Abdullah Alqahtani <0xqahta0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
requests = "^2.32.3"
pymongo = "^4.10.1"
bs4 = "^0.0.2"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
